--- a/build.gradle
+++ b/build.gradle
@@ -107,15 +107,6 @@ sourceSets {
     resources.srcDir file('src/functionalTest/resources')
   }
 
-  integrationTest {
-    java {
-      compileClasspath += main.output
-      runtimeClasspath += main.output
-      srcDir file('src/integrationTest/java')
-    }
-    resources.srcDir file('src/integrationTest/resources')
-  }
-
   smokeTest {
     java {
       compileClasspath += main.output
@@ -149,15 +140,6 @@ tasks.withType(Test) {
 
 test {
   failFast = true
-}
-
-task integration(type: Test) {
-  description = "Runs integration tests"
-  group = "Verification"
-  testClassesDirs = sourceSets.integrationTest.output.classesDirs
-  classpath = sourceSets.integrationTest.runtimeClasspath
-  failFast = true
-  testLogging.showStandardStreams = false
 }
 
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
@@ -195,7 +177,7 @@ task functional(description: 'Runs the functional tests.') {
   dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, runFunctionalTests))
 }
 
-project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
+project.tasks['sonarqube'].dependsOn test, jacocoTestReport
 
 sonarqube {
   properties {
@@ -207,7 +189,7 @@ sonarqube {
 }
 
 jacocoTestReport {
-  executionData(test, integration)
+  executionData(test)
   executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
   subprojects.each {
     sourceSets it.sourceSets.main
@@ -325,8 +307,15 @@ dependencies {
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
-  integrationTestImplementation sourceSets.main.runtimeClasspath
-  integrationTestImplementation sourceSets.test.runtimeClasspath
+  testImplementation group: 'org.camunda.bpm.extension.springboot', name: 'camunda-bpm-spring-boot-starter-test', version: '2.2.0'
+
+  testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+
+  testImplementation group: 'io.rest-assured', name: 'rest-assured', {
+    exclude group: 'io.rest-assured', module: 'xml-path'
+  }
+
+  testCompile group: 'org.springframework.statemachine', name: 'spring-statemachine-test', version: versions.springStatemachine
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
 
