--- a/charts/civil-camunda/Chart.yaml
+++ b/charts/civil-camunda/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v2
 description: A Helm chart for civil-camunda App
 name: civil-camunda
 home: https://github.com/hmcts/civil-camunda-bpmn-definition
-version: 0.0.8
+version: 0.0.9
 maintainers:
   - name: HMCTS Civil team
 
@@ -24,7 +24,7 @@ dependencies:
     repository: '@hmctspublic'
     condition: idam-pr.enabled
   - name: postgresql
-    version: 8.9.8
+    version: ~10.16.0
     repository: https://charts.bitnami.com/bitnami
     condition: postgresql.enabled
   - name: camunda-bpm
