--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,13 @@ allprojects {
       dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.10'
       dependency group: 'commons-io', name: 'commons-io', version: '2.10.0'
       dependency group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.7.2'
+
+      dependencySet(
+        group: 'org.camunda.bpm',
+        version: '7.17.0'
+      ) {
+        entry 'camunda-engine'
+      }
     }
     imports {
       mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.3'
@@ -213,7 +220,7 @@ dependencies {
   implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.3'
   implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.13.3', ext: 'pom'
   implementation 'org.yaml:snakeyaml:1.31'
-
+  implementation 'com.google.code.gson:gson:2.8.9'
   testImplementation libraries.junit5
   testImplementation group: 'org.camunda.bpm.extension.springboot', name: 'camunda-bpm-spring-boot-starter-test', version: '2.2.0'
   testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
