--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,13 @@ allprojects {
       dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.10'
       dependency group: 'commons-io', name: 'commons-io', version: '2.10.0'
       dependency group: 'org.springframework.security', name: 'spring-security-crypto', version: '5.7.2'
+
+      dependencySet(
+        group: 'org.camunda.bpm',
+        version: '7.17.0'
+      ) {
+        entry 'camunda-engine'
+      }
     }
     imports {
       mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.3'
