--- a/build.gradle
+++ b/build.gradle
@@ -217,8 +217,8 @@ dependencies {
   implementation group: 'org.springframework', name: 'spring-beans', version: '5.3.23'
   implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.17.0'
   implementation group: 'org.camunda.bpm.extension.rest', name: 'camunda-rest-client-spring-boot-starter', version: '0.0.6'
-  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.13.4'
-  implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.13.4', ext: 'pom'
+  implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0-rc1'
+  implementation group: 'com.fasterxml.jackson', name: 'jackson-bom', version: '2.14.0-rc1', ext: 'pom'
   implementation 'org.yaml:snakeyaml:1.33'
 
   testImplementation libraries.junit5
