CIV-4838: Fix for CVE-2022-24329

--- a/build.gradle
+++ b/build.gradle
@@ -73,6 +73,24 @@ allprojects {
       ) {
         entry 'camunda-engine'
       }
+      dependencySet(
+        group: 'org.jetbrains.kotlin',
+        version: '1.7.0'
+      ) {
+        entry 'kotlin-stdlib-common'
+      }
+      dependencySet(
+        group: 'org.jetbrains.kotlin',
+        version: '1.7.10'
+      ) {
+        entry 'kotlin-stdlib'
+      }
+      dependencySet(
+        group: 'org.jetbrains.kotlin',
+        version: '1.7.0'
+      ) {
+        entry 'kotlin-reflect'
+      }
     }
     imports {
       mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2021.0.4'
